<resources>
    <string name="app_name">MTG Familiar</string>
    <string name="name_search_hint">Search Names</string>
    <string name="slash">/</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_both">Both</string>
    <string name="dialog_life">Life</string>
    <string name="dialog_thanks">Thanks!</string>
    <string name="dialog_thanks_anyway">Thanks Anyway!</string>
    <string name="dialog_enjoy">Enjoy!</string>
    <string name="dialog_play">Let\'s Play!</string>
    <string name="dialog_save">Save</string>
    <string name="update_notification">Checking for database updates</string>
    <string name="update_updating_set">Adding %s…</string>
    <string name="update_updating_rules">Updating comprehensive rules…</string>
    <string name="update_added">Added</string>
    <string name="update_added_rules">new comprehensive rules</string>
    <string name="update_added_mtr">new Magic Tournament Rules</string>
    <string name="update_added_ipg">new Infraction Procedure Guide</string>
    <string name="update_parse_cards">Parsing %s</string>
    <string name="update_parse_rules">Parsing comprehensive rules</string>
    <string name="error">Error</string>
    <string name="error_database">A database error occurred. If it persists, try clearing the app data from the Android settings menu.</string>
    <string name="error_corruption">Whoops! It looks like an important part of this app has been corrupted and doesn\'t work anymore.
        We\'re trying to figure out exactly what\'s causing this to happen, so please send us an email at 
        &lt;a href="mailto:mtg.familiar@gmail.com">mtg.familiar@gmail.com&lt;/a> so we can track this bug and fix it.
        In the meantime, if it doesn\'t manage to fix itself, please try clearing the app data in your device\'s settings,
        and if that doesn\'t work reinstall the app from the Play Store.</string>
    <string name="error_no_email_client">It does not appear that you have an active email client installed. Please configure an email application.</string>
    <string name="ph_type">Type</string>
    <string name="ph_cost">Cost</string>
    <string name="ph_ability">Ability</string>
    <string name="ph_power">P</string>
    <string name="ph_toughness">T</string>
    <string name="main_pages">PAGES</string>
    <string name="main_extras">EXTRAS</string>
    <string name="main_card_search">Card Search</string>
    <string name="main_life_counter">Life Counter</string>
    <string name="main_mana_pool">Mana Pool</string>
    <string name="main_dice">Dice</string>
    <string name="main_trade">Trade Cards</string>
    <string name="main_wishlist">Wishlist</string>
    <string name="main_timer">Round Timer</string>
    <string name="main_rules">Rules</string>
    <string name="main_judges_corner">Judge\'s Corner</string>
    <string name="main_mojhosto">MoJhoSto Basic</string>
    <string name="main_force_update_title">Force Update</string>
    <string name="main_settings_title">Settings</string>
    <string name="main_donate_title">Donate</string>
    <string name="main_donate_dialog_title">Donate to the Devs</string>
    <string name="main_donate_text">        For a premium M:TG app like this, how much would you pay? $1,000? $10,000?&lt;br />&lt;br />
        Well, if you\'re reading this, you already know we\'re giving it away for free!&lt;br />&lt;br />
        Coding is hard work though, and us devs appreciate the extra dollar here or there.&lt;br />&lt;br />
        We\'ve got a drafting habit to fuel, OK?&lt;br />&lt;br />
        You can click the button below to donate via PayPal. $1 is cool. $5 is cooler. You get the drift.&lt;br />&lt;br />
        So, how generous are you feeling today?</string>
    <string name="main_whats_new_title">What\'s New</string>
    <string name="main_whats_new_in_title">What\'s New in Version</string>
    <string name="main_whats_new_text">
 	- Ae and Æ are now interchangeable for searches&lt;br />&lt;br />
 	- Polish translation&lt;br />&lt;br />
 	- Oracle text update&lt;br />&lt;br />
 	- Bugfixes for Android 4.3
 	</string>
    <string name="main_tts_warning_title">Text-to-Speech</string>
    <string name="main_tts_warning_text">This application has text-to-speech capability for some of its features, but you don\'t seem to have it installed. 
        If you want to install it, use the "Install Text-to-Speech" link in the settings menu.</string>
    <string name="main_export_data_title">Export Data to SD</string>
    <string name="main_export_success">Successfully exported data to</string>
    <string name="main_export_fail">Failed to export data to SD card</string>
    <string name="main_import_data_title">Import Data from SD</string>
    <string name="main_import_success">Import succeeded</string>
    <string name="main_import_fail">Import failed. Please put MTGFamiliarBackup.zip in the root of your SD card</string>
    <string name="main_about">About</string>
    <string name="main_about_title">About App</string>
    <string name="pref_screen_general">General Settings</string>
    <string name="pref_screen_search">Search &amp; Results</string>
    <string name="pref_screen_counter">Life Counter</string>
    <string name="pref_screen_timer">Round Timer</string>
    <string name="pref_screen_trade_wishlist">Trade &amp; Wishlist</string>
    <string name="pref_cat_default_fragment">Default Page</string>
    <string name="pref_default_fragment_mode_title">Default Page</string>
    <string name="pref_default_fragment_mode_summary">The first thing you see when you open the app</string>
    <string name="pref_cat_updates">Database Updates</string>
    <string name="pref_auto_updates_title">Automatic Updates</string>
    <string name="pref_auto_updates_summary">Check for new sets and bannings when the app opens</string>
    <string name="pref_update_frequency_title">Update Frequency</string>
    <string name="pref_update_frequency_summary">Number of days to go between checking for new sets and bannings</string>
    <string name="pref_cat_card_view">Card View</string>
    <string name="pref_show_art_title">Always Show Art</string>
    <string name="pref_show_art_summary">When viewing a card, load official card image instead of rules text</string>
    <string name="pref_scroll_title">Scroll Results</string>
    <string name="pref_scroll_summary">Show buttons to scroll between search results</string>
    <string name="pref_card_language_title">Card image language</string>
    <string name="pref_card_language_summary">Choose the language used to retrieve the card image</string>
    <string name="pref_cat_dice">Dice</string>
    <string name="pref_d2_as_coin_title">Treat D2 As Coin</string>
    <string name="pref_cat_life_counter">Life Counter</string>
    <string name="pref_wake_lock_title">Wake Lock</string>
    <string name="pref_wake_lock_summary">Force the life counter screen to never go to sleep</string>
    <string name="pref_display_mode_title">Display Mode</string>
    <string name="pref_display_mode_summary">Choose how to display the Life Counter</string>
    <string name="pref_cat_timer">Round Timer</string>
    <string name="pref_default_time_title">Default Round Length</string>
    <string name="pref_default_time_summary">Set the default length for the round timer</string>
    <string name="pref_ringtone_title">Timer Ringtone</string>
    <string name="pref_ringtone_summary">Select a notification ringtone to play when the round timer ends</string>
    <string name="pref_fifteen_minutes_title">15-Minute Warning</string>
    <string name="pref_ten_minutes_title">10-Minute Warning</string>
    <string name="pref_five_minutes_title">5-Minute Warning</string>
    <string name="pref_cat_trade_window">Trade Window</string>
    <string name="pref_trade_price_title">Price Setting</string>
    <string name="pref_trade_price_summary">TCGplayer price to use when trading cards</string>
    <string name="pref_cat_result_list">Result List</string>
    <string name="pref_consolidate_title">Consolidate Results</string>
    <string name="pref_consolidate_summary">Only show the most recent printing of a card</string>
    <string name="pref_show_set_title">Show Set</string>
    <string name="pref_show_mana_title">Show Mana Cost</string>
    <string name="pref_show_type_title">Show Type/Subtype</string>
    <string name="pref_show_ability_title">Show Rules Text</string>
    <string name="pref_show_pt_title">Show Power/Toughness</string>
    <string name="pref_cat_tts">Text-to-Speech</string>
    <string name="pref_install_tts_title">Install Text-to-Speech</string>
    <string name="pref_install_tts_summary">Clicking here will take you to the text-to-speech install page in the Google Play Store</string>
    <string name="pref_cat_wishlist">Wishlist</string>
    <string name="pref_wishlist_details_title">Show Details</string>
    <string name="pref_wishlist_details_summary">Display full card details in the wishlist</string>
    <string name="pref_wishlist_totals_title">Show Total Price</string>
    <string name="pref_wishlist_totals_summary">Display total price summary in the wishlist</string>
    <string name="pref_wishlist_prices_title">Show Card Prices</string>
    <string name="pref_wishlist_prices_summary">Display each card price in the wishlist</string>
	<string name="pref_life_timer_title">Timer</string>
	<string name="pref_life_timer_summary">How long to wait before starting a new entry</string>
    <string name="main_card_language">en</string>
</resources>